@@ -3,15 +3,15 @@ TODO-SVN:
 * DONE! Get to compile with SDL 1.3
 	* segfaults when opening a second game
 	* segfaults on fullscreen entry
-* Fix sound stuttering/lag (fixed in SDL 1.1.14?) 
+* DONE! Fix sound stuttering/lag (fixed in SDL 1.1.14)
 * Flesh out GTK GUI
 	* Sound config
 		* DONE! Individual volume mixers
 	* Save config
 		* Should be in menus
 	* Hotkeys
-		* Redesign internal data structures of hotkeys 
-		* (a bunch of global ints is ugly)
+		* DONE! Redesign internal data structures of hotkeys 
+		* design UI
 	* Video config
 		* DONE! Windowed scale amount
 		* DONE! Color / Hue / Tint
@@ -30,3 +30,4 @@ TODO-SVN:
 * DONE! Fix Famicom Disk System
 * DONE!(PAUSE) Add a key to resume normal playback when finished frameskipping
 * DONE! Make GetUserInput not depend on zenity
+* DONE! Fixed dpad/hat support
